# DiagnosticIndexExtension

./: CMakeLists.txt  DiagnosticIndex.cmake  SuperBuild.cmake
SuperBuild/: External_statismo.cmake
src/CLI/computeMean/: CMakeLists.txt
src/CLI/computeShapeOALoads/: CMakeLists.txt
src/CLI/saveModel/: CMakeLists.txt
src/DiagnosticIndex/: DiagnosticIndex.py
src/DiagnosticIndex/Resources/UI/: DiagnosticIndex.ui
